checkout new user register
new user can register from checkout page and he can after complate register continue finsh his order

--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -17,7 +17,7 @@
                         <div id="visitor-user-options" class="">
                             <div class="btns-container  fl-row">
                                 <a href="{% url 'acounts:login' %}" class="btn btn-dark my-1">Login</a>
-                                <a href="{% url 'acounts:register' %}" class="btn btn-sec">Sign up</a>
+                                <a href="{% url 'store:registerCheckout' %}" class="btn btn-sec">Sign up</a>
                             </div>
                             <p class="center"><b>Or continue without sign up</b></p>
                         </div>                    
