--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -16,7 +16,7 @@
                 <div class="col">
                         <div id="visitor-user-options" class="">
                             <div class="btns-container  fl-row">
-                                <a href="{% url 'acounts:login' %}" class="btn btn-dark my-1">Login</a>
+                                <a href="{% url 'store:loginCheckout' %}" class="btn btn-dark my-1">Login</a>
                                 <a href="{% url 'store:registerCheckout' %}" class="btn btn-sec">Sign up</a>
                             </div>
                             <p class="center"><b>Or continue without sign up</b></p>
