--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,6 +180,11 @@ a{
     cursor: pointer;
     border: 1px solid var(--dark-color);
     border-radius: 5px;
+    transition: transform 0.2s ease-in;
+}
+
+.btn:hover{
+    transform: translateY(-2px) scale(1.03);
 }
 
 .btn-primary{
@@ -187,9 +192,7 @@ a{
     color: var(--dark-color);
 }
 
-.btn:hover{
-    transform: scale(1.1);
-}
+
 
 .btn-sec{
     background-color: var(--sec-color);
